<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jahanwalsh.justlyrics.ui.AboutActivity">

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/about_head"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/aboutTextView4"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_below="@+id/aboutTextView3"
        android:layout_centerHorizontal="true"
        android:text="@string/about_4"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView3"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/aboutTextView3"
        android:layout_width="345dp"
        android:layout_height="89dp"
        android:layout_below="@+id/aboutTextView2"
        android:layout_centerHorizontal="true"
        android:text="@string/about_3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/aboutTextView2"
        android:layout_width="351dp"
        android:layout_height="86dp"
        android:layout_below="@+id/aboutTextView1"
        android:layout_centerHorizontal="true"
        android:text="@string/about_2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/aboutTextView4"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="144dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="143dp"
        app:layout_constraintTop_toTopOf="@+id/aboutTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aboutTextView1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@+id/aboutTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/about_1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/aboutTextView2"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="69dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toTopOf="@+id/aboutTextView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:width="200dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:text="Back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.388" />
</android.support.constraint.ConstraintLayout>





